--- a/CSGO-GEN-WebAssembly/Components/MainLayout.razor
+++ b/CSGO-GEN-WebAssembly/Components/MainLayout.razor
@@ -4,7 +4,7 @@
     <nav class="navbar bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/assets/img/logo/logo.png" alt="CS2 Gencodes">
+                <img src="https://media.discordapp.net/attachments/834910237784801300/1159555649290637312/bunukoybunu.png" alt="princex">
             </a>
         </div>
     </nav>
@@ -18,33 +18,8 @@
             <div class="row">
                 <div class="col-md-4 col-lg-3">
 
-                    <div class="d-flex gap-3 text-light mb-3">
-                        <a target="_blank" href="https://steamcommunity.com/id/_orphy_"><i class="fa-brands fa-steam fa-xl"></i></a>
-                        <a target="_blank" href="https://twitch.tv/orphycs"><i class="fa-brands fa-twitch fa-xl"></i></a>
-                        <a target="_blank" href="https://youtube.com/marvinkleinmusic"><i class="fa-brands fa-youtube fa-xl"></i></a>
-                        <a target="_blank" href="https://github.com/MarvinKlein1508"><i class="fa-brands fa-github fa-xl"></i></a>
-                    </div>
-
-                    <p class="mb-4">Special thanks to Anxioustricky for helping us collecting all the skin data.</p>
-
-                    <p class="mb-4">Special thanks to dr3fty for helping us out with generating the inspect links.</p>
-
-
-
-                </div>
-                <div class="col-md-4 col-lg-3">
-
-                    <h4>Learn More</h4>
-                    <ul class="list-unstyled mb-0">
-                        <li><a href="changelog">Changelog</a></li>
-                    </ul>
-
-
-                </div>
-
-
             </div>
-            <p class="text-center">&copy; 2023 Marvin Klein. All rights reserved.</p>
+            <p class="text-center">&copy; 1992 princex. Tüm haklarım saklı değil.</p>
         </div>
     </footer>
 
