--- a/CSGO-GEN-WebAssembly/Pages/Index.razor
+++ b/CSGO-GEN-WebAssembly/Pages/Index.razor
@@ -20,9 +20,9 @@
                         <input type="text" value="@SelectedWeapon.GetGencode(Float, Pattern, SelectedStickers)" class="form-control" placeholder="konsola yapıştırıcaksın!!!" id="gencode" />
                         <label for="gencode">Konsol Komutu</label>
                     </div>
-                    <a class="inspect-btn btn btn-info" href="@inspectService.GenerateInspectLink(SelectedWeapon, Float, Pattern, SelectedStickers)">Inspect</a>
+                    <a class="inspect-btn btn btn-info" href="@inspectService.GenerateInspectLink(SelectedWeapon, Float, Pattern, SelectedStickers)">İncele</a>
 
-                    <button type="button" class="btn btn-primary" onclick="copyGencode()"><i class="fa-solid fa-copy"></i></button>
+                    <button type="button" class="btn btn-primary" onclick="copyGencode()"><i class="fa-solid fa-copy">Kopyala</i></button>
                 </div>
 
             }
