--- a/CSGO-GEN-WebAssembly/Components/MainLayout.razor
+++ b/CSGO-GEN-WebAssembly/Components/MainLayout.razor
@@ -18,6 +18,7 @@
             <div class="row">
                 <div class="col-md-4 col-lg-3">
 
+                          </div>
             </div>
             <p class="text-center">&copy; 1992 princex. Tüm haklarım saklı değil.</p>
         </div>
